<resources>
    <string name="app_name">Kisan Bazar</string>
    <string name="acitvity_developer">Contact Us</string>
    <string name="action_example">Preferences</string>
    <string name="navigation_drawer_open">Navigation Drawer Opened</string>
    <string name="navigation_drawer_close">Navigation Drawer Closed</string>
    <string name="our_products">Our Products</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">1</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail</string>
    <string name="sample_website">worldpressplg</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
    <string name="remove">Remove</string>
    <string name="title_activity_main_nvg_acitivity">Main_nvg_acitivity</string>
    <string name="otp_code">OTP Code</string>
    <string name="verify_your_mobile_number"><![CDATA[Sit back & Relax! while we verify your mobile number]]></string>
    <string name="ok">OK</string>
    <string name="gotocart">Go To Cart</string>
    <string name="verifykisanbazar">Kisan Bazar will send a one time SMS message to verify phone number.</string>
    <string name="enter_number">Please enter the your number</string>
    <string name="your_number">Your Number</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="paytm">PAYTM</string>
    <string name="payment_options">Payment Options:</string>
    <string name="kisan_bazar_delivery">Kisan Bazar Delivery</string>
    <string name="total_pay_rs">Total Pay:Rs</string>
    <string name="fill_the_address">Fill the address</string>
    <string name="name">Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="number">Number</string>
    <string name="next">Next</string>
    <string name="pay_rs">"Pay: Rs "</string>
    <string name="my_orders">My Orders</string>
    <string name="cancel">Cancel</string>
    <string name="sms_send_to_your_mobile_number_will_be_received_any_time">Sms send to your mobile number,will be received any time</string>
</resources>
