<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_proceed_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linear_background"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/button_background">

        <TextView
            android:id="@+id/total_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/total_pay_rs"
            android:textColor="@color/button_textColor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <TextView
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/kisan_bazar_delivery"
        android:textColor="@color/first_page_text" />

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/payment_options"
        android:textColor="@color/second_text_fg" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white">

        <Button
            android:id="@+id/paytmCall"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/button_background"
            android:gravity="center"
            android:text="@string/paytm"
            android:textColor="@color/button_textColor" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white">

        <Button
            android:id="@+id/cashOnCall"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            android:background="@color/button_background"
            android:gravity="center"
            android:text="@string/cash_on_delivery"
            android:textColor="@color/button_textColor" />

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/proceedProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
