<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64B5F6"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:text="@string/enter_number"
        android:textColor="@color/first_page_text" />

    <TextView
        android:id="@+id/textView3"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/verifykisanbazar"
        android:textColor="@color/second_text_fg" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/editN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/apptheme_textfield_focused_holo_light"
            android:gravity="center"
            android:hint="@string/your_number"
            android:inputType="number"
            android:maxLength="10"
            android:textColorHint="@color/hint_colors" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/xyzCardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white">

        <Button
            android:id="@+id/mobileN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:text="@string/ok"
            android:textColor="@color/button_textColor" />
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/mobileProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xyzCardview"
        android:layout_margin="20dp"
        android:visibility="gone" />

</RelativeLayout>